@@ -1,3 +1,9 @@
+2003-09-14  Alexandre Oliva  <aoliva@redhat.com>
+
+	* c-ppoutput.c (cb_line_change): Revert 2003-08-04's change.
+	* c-lex.c (cb_line_change): Skip line changing whenever
+	c-ppoutput.c would.
+
 2003-10-07  Mike Stump  <mrs@apple.com>
 
 	* gcc.c (default_compilers): Don't include -server in name.
